# text_classification

./: .cruft.json  .envrc  .gitignore  Makefile  README.md  conftest.py  dev.requirements.in  dev.requirements.txt  pyproject.toml  requirements.in  requirements.txt
dagster/: dagster.yaml
docs/: notes.md
notebooks/: eda.ipynb  eda.py  evaluating_tfidf_logistic_regression_model.ipynb  evaluating_tfidf_logistic_regression_model.py  interpreting_tfidf_logistic_regression_model.ipynb  interpreting_tfidf_logistic_regression_model.py  visualize_embeddings.ipynb  visualize_embeddings.py
scripts/: debug.py
src/text_classification/: __init__.py  config.py  data.py  foo.py  metrics.py  transforms.py
src/text_classification/assets/: __init__.py  datasets.py  embeddings.py  models.py  predictions.py  transforms.py
src/text_classification/models/: __init__.py  base.py  finetuned_lm.py  frozen_lm_with_lr.py  label_distribution.py  most_common_class.py  random_class.py  sentence_transformer_logistic_regression.py  tfidf_logistic_regression.py  tfidf_with_lr.py
src/text_classification/models/frozen_lm_with_nn/: __init__.py  lightning_module.py  model.py  train.py
src/text_classification/models/sentence_transformer_nn/: __init__.py  model.py  train.py
tests/text_classification/: test_foo.py
